# paperclip

./: .dockerignore  .gitignore  Cargo.toml  README.md  TODO.md  gpt-instructions.md  lerna.json  package-lock.json  package.json  paperclip.config.json
libs/ast_serialize/: Cargo.toml
libs/ast_serialize/src/: css.rs  docco.rs  lib.rs  pc.rs  serializable.rs
libs/cli/: Cargo.toml
libs/cli/src/: main.rs
libs/cli/src/commands/: build.rs  designer.rs  fmt.rs  init.rs  mod.rs
libs/compiler-react/: Cargo.toml
libs/compiler-react/src/: code_compiler.rs  compiler.rs  context.rs  definition_compiler.rs  lib.rs  utils.rs
libs/compiler-react/src/tests/: basic.rs  code.rs  mod.rs  typed_definition.rs
libs/compiler-yew/: Cargo.toml
libs/compiler-yew/src/: code_compiler.rs  context.rs  lib.rs
libs/compiler-yew/src/tests/: code.rs
libs/config/: Cargo.toml  README.md  index.d.ts  package.json
libs/config/bindings/: CompilerOptions.ts  Config.ts  ConfigContext.ts
libs/config/src/: config.rs  io.rs  local.rs
libs/core/: Cargo.toml  package.json  tsconfig.json
libs/core/bindings/: CompilerOptions.ts  Config.ts  LintConfig.ts
libs/core/src/config/: config.rs  local.rs  mod.rs
libs/design-server/: Cargo.toml  README.md  build.rs
libs/design-server/proto/: designer.proto  designer2.proto
libs/design-server/src/: 2.rs  lib.rs  main.rs  server.rs
libs/design-server/src/server/: core.rs  mod.rs
libs/designer/: .gitignore  Cargo.toml  README.md  build.rs  index.html  package.json  paperclip.config.json  paperclip.config2.json  paperclip.webpack.config.json  tsconfig.json  webpack.config.js
libs/designer/assets/: main.css
libs/designer/proto/: designer.proto
libs/designer/src/: Main.tsx  entry.tsx  env.ts  events.rs  index.html  lib.rs  main.rs  state.rs  types.rs
libs/designer/src/api/: index.ts
libs/designer/src/components/: Main.pc  Main.tsx  Page.pc  app.pc  mod.rs  sketch.pc  test.pc  test2.pc
libs/designer/src/editor/: entry.tsx  env.ts  index.html
libs/designer/src/engine/: index.ts
libs/designer/src/engines/: mod.rs
libs/designer/src/events/: index.ts
libs/designer/src/machine/: engine.rs  index.ts  mod.rs  store.rs
libs/designer/src/reducer/: index.ts
libs/designer/src/server/: base.rs  core.rs  io.rs  mod.rs  proto.rs  res_body.rs  routes.rs  server.rs  service.rs
libs/designer/src/shared/: mod.rs
libs/designer/src/state/: confirm.ts  core.ts  fs.ts  geom.ts  index.ts  mod.rs  pc.ts  prompt.ts  routes.ts  theme.pc  ui.ts  utils.ts
libs/designer/src/styles/: assets-modal.pc  button.pc  canvas.pc.rs  center-panels.pc  center-panels.pc.rs  color-picker.pc  common.pc  common.pc.rs  context-menu.pc  context-menu.pc.rs  custom-elements.js  dashboard-page.pc  decl-suggestion.pc  editor.pc  editor.pc.rs  etc.pc  globals.css  input.pc  input.pc.rs  layout.pc  left-sidebar.pc  left-sidebar.pc.rs  menu.pc  modal.pc  modal.pc.rs  prompt.pc  resource-modal.pc  right-sidebar.pc  right-sidebar.pc.rs  sidebar.pc  sidebar.pc.rs  slider-input.pc  some-file.pc  something.pc  styles-panel.pc  styles-panel.pc.rs  test.pc  theme.pc  token-input.pc  toolbar.pc  (+4 more)
libs/designer/src/ui/: Box.tsx  button.pc  color-picker.pc  decl-suggestion.pc  editor.pc  etc.pc  input.pc  layout.pc  menu.pc  modal.pc  resource-modal.pc  right-sidebar.pc  slider-input.pc  styles-panel.pc  test.pc  theme.pc  token-input.pc  toolbar.pc  ut.pc  utils.pc
libs/designer/src/ui-testing/: test-2.pc  test.pc
libs/designer/test/controls/: index.ts  mock-designer.ts  utils.ts
libs/designer/test/integration/: basic.test.ts  canvas.test.ts  component-properties.test.ts  edit.test.ts  editor.test.ts  layer-navigation.test.ts  undo-redo.test.ts  utils.ts
libs/designer/test/reducer/: canvas.test.ts  utils.ts
libs/editor/: Cargo.toml
libs/editor/src/: actions.rs  edit.rs  lib.rs
libs/editor/src/mutations/: append_child.rs  base.rs  delete_expr.rs  mod.rs
libs/editor/src/test/: mod.rs
libs/emulator/: Cargo.toml  README.md
libs/emulator/src/: bundle.rs  lib.rs
libs/evaluator/: Cargo.toml  package.json
libs/evaluator/src/: index.ts  lib.rs  runtime.rs
libs/evaluator/src/core/: errors.rs  io.rs  mod.rs  utils.rs
libs/evaluator/src/css/: context.rs  evaluator.rs  mod.rs  serializer.rs  tests.rs  virt.rs
libs/grpc-web-client/: Cargo.toml  LICENSE  README.md
libs/grpc-web-client/src/: call.rs  lib.rs
libs/infer/: Cargo.toml
libs/infer/src/: context.rs  infer.rs  lib.rs  state.rs  tests.rs  types.rs
libs/language-services/: Cargo.toml
libs/language-services/src/: context.rs  document_info.rs  lib.rs  state.rs  tests.rs
libs/language_services/: Cargo.toml
libs/language_services/src/: context.rs  document_info.rs  tests.rs
libs/paperclip-loader/: .gitignore  Cargo.toml  README.md  package.json
libs/paperclip-loader/src/: index.ts  lib.rs  loader.rs  tests.rs
libs/parser/: Cargo.toml  build.rs  package.json
libs/parser/proto/: base.proto  css.proto
libs/parser/src/: index.ts  lib.rs
libs/parser_web/: Cargo.toml  package.json
libs/parser_web/src/: lib.rs
libs/project/: Cargo.toml
libs/project/src/: config.rs  lib.rs
libs/proto/: Cargo.toml  README.md  build.rs  index.d.ts  package.json  tsconfig.json
libs/proto/scripts/: build.sh
libs/proto/src/: lib.rs  utils.rs
libs/proto_ext/: .gitignore  Cargo.toml  README.md  package.json
libs/proto_ext/scripts/: build.sh
libs/proto_ext/src/: lib.rs  utils.rs
libs/rs-common/: Cargo.toml
libs/rs-common/src/: event_bus.rs  event_stream.rs  fs.rs  fun.rs  lib.rs  path.rs  pc.rs  serialize_context.rs
libs/rs_common/: Cargo.toml
libs/rs_common/src/: event_bus.rs  id.rs  lib.rs  log.rs  path.rs  serialize_context.rs
libs/tidy/: Cargo.toml
libs/tidy/src/: lib.rs
libs/validate/: Cargo.toml
libs/validate/src/: lib.rs  lint.rs  lint_test.rs  print.rs  validate.rs  validate_test.rs
libs/workspace/: .gitignore  Cargo.toml  jest.config.js  localhost+2-key.pem  localhost+2.pem  package.json  paperclip.config.json  paperclip.webpack.config.json
libs/workspace/src/: lib.rs
(+1357 files in other folders)
