[workspace]
resolver = "2"
members = [
  "libs/compiler-react",
  "libs/compiler-yew",
  "libs/cli",
  "libs/rs_common",
  "libs/lint",
  "libs/project",
  "libs/evaluator",
  "libs/paperclip-loader",
  "libs/workspace",
  "libs/infer",
  "libs/proto",
  "libs/proto_ext",
  "libs/ast_serialize",
  "libs/config",
  "libs/language_services"
]


[profile.release]
debug = false
opt-level = 3
lto = true

[profile.dev]
opt-level = 1
overflow-checks = false
