[workspace]
resolver = "2"
members = [
  "libs/compiler-react",
  "libs/compiler-yew",
  "libs/cli",
  "libs/rs_common",
  "libs/validate",
  "libs/project",
  "libs/evaluator",
  "libs/tidy",
  "libs/paperclip-loader",
  "libs/emulator",
  "libs/workspace",
  "libs/infer",
  "libs/proto",
  "libs/core",
  "libs/ast_serialize",
  "libs/language_services"
]


[profile.release]
debug = false
opt-level = 3
lto = true

[profile.dev]
opt-level = 1
overflow-checks = false
