[package]
name = "paperclip_ast_serialize"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []

[lib]
name = "paperclip_ast_serialize"

[dependencies]
paperclip_proto = { path = "../proto", features = [] }
paperclip_common = { path = "../rs_common", features = [] }