[package]
name = "paperclip_cli"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
paperclip_parser = { path = "../parser" }
paperclip_project = { path = "../project" }
paperclip_proto = { path = "../proto" }
paperclip_common = { path = "../rs_common" }
paperclip_validate = { path = "../validate" }
paperclip_ast_serialize = { path = "../ast_serialize" }
paperclip_workspace = { path = "../workspace" }
paperclip_core = { path = "../core" }
serde_json = { version = "1.0.83" }
serde = "1.0.143"
futures = "0.3.21"
futures-core = "0.3.24"
futures-util = "0.3.24"
anyhow = "1.0.61"
textwrap = "0.15.0"
console = "0.15.1"

# [dependencies.compiler_builtins]
# git = "https://github.com/rust-lang/compiler-builtins"
# features = ["c"]
