[package]
name = "paperclip_compiler_react"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []

[lib]
name = "paperclip_compiler_react"

[features]
default = ["local"]
local = ["paperclip_parser/local", "paperclip_common/local" , "paperclip_proto/local", "paperclip_proto_ext/local", "paperclip_evaluator/local", "paperclip_infer/local"]

[dependencies]
paperclip_parser = { path = "../parser", features = [] }
paperclip_common = { path = "../rs_common", features = [] }
paperclip_proto = { path = "../proto", features = [] }
paperclip_proto_ext = { path = "../proto_ext", features = [] }
paperclip_evaluator = { path = "../evaluator", features = [] }
paperclip_infer = { path = "../infer", features = [] }
anyhow = "1.0.61"
futures = "0.3.25"
Inflector = "0.11.4"
crc = "1.8.1"
pathdiff = "0.2.1"
