[package]
name = "paperclip_config"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []

[lib]
name = "paperclip_config"

[features]
default = ["local"]
local = [
    "paperclip_proto_ext/local",
    "paperclip_parser/local",
    "paperclip_common/local"
]

[dependencies]
ts-rs = "6.1"
paperclip_common = { path = "../rs_common", features = [] }
paperclip_parser = { path = "../parser", features = [] }
paperclip_proto_ext = { path = "../proto_ext", features = [] }
paperclip_proto = { path = "../proto" }
serde = { version = "1.0.143", features = ["derive"] }
wax = "0.5.0"
futures = "0.3.21"
serde_json = { version = "1.0.83" }
anyhow = "1.0.61"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
path-absolutize = { version = "3.0.14" }
