[package]
name = "paperclip_core"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []

[lib]
name = "paperclip_core"


[dependencies]
paperclip_proto = { path = "../proto"  }
paperclip_parser = { path = "../parser" }
paperclip_common = { path = "../rs_common" }
anyhow = "1.0.66"
futures = "0.3.25"
crc = "1.8.1"
async-trait = "0.1.58"

convert_case = "0.6.0"
regex = "1.7.0"
paperclip_ast_serialize = { path = "../ast_serialize" }
Inflector = "0.11.4"
ts-rs = "6.1"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = { version = "1.0.83" }
wax = "0.5.0"



[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
path-absolutize = { version = "3.0.14" }
