[package]
name = "paperclip_design_server"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []

[lib]
name = "paperclip_design_server"

[dependencies]
paperclip_project = { path = "../project" }
tonic = "0.8.1"

[dev-dependencies]
assert_cmd = "2.0.4"
