[package]
name = "paperclip_design_server"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []

[lib]
name = "paperclip_design_server"

[dependencies]
paperclip_project = { path = "../project" }
tonic = "0.8.1"
prost = "0.11.0"
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net"] }
hyper = "0.14.20"
portpicker = "0.1.1"
warp = "0.3.2"
futures = "0.3.21"
tower = "0.4.13"
http = "0.2.8"
http-body = "0.4.5"

[dev-dependencies]
assert_cmd = "2.0.4"

[build-dependencies]
tonic-build = "0.8.0"
