[package]
name = "paperclip_designer"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []



[dependencies]
gloo = "0.8"
js-sys = "0.3"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
paperclip_proto = { path = "../proto", features = []  }
wasm-bindgen = "0.2"
flume = "0.10.14"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen-test = "0.3.33"
async-std = "1.12.0"
# tonic-web-wasm-client = "0.2.2"
[target.'cfg(target_arch = "wasm32")'.dependencies]
tonic-web-wasm-client = "0.2.2"
