[package]
name = "paperclip_editor"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []

[lib]
name = "paperclip_editor"

[dependencies]
paperclip_proto = { path = "../proto" }
paperclip_proto_ext = { path = "../proto_ext" }
paperclip_parser = { path = "../parser" }
paperclip_common = { path = "../rs-common" }
futures = "0.3.25"


