[package]
name = "paperclip_evaluator"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []

[lib]
name = "paperclip_evaluator"

[dependencies]
paperclip_parser = { path = "../parser" }
serde = { version = "1.0.143", features = ["derive"] }
paperclip_common = { path = "../rs-common" }
paperclip_proto = { path = "../proto" }
anyhow = "1.0.61"
futures = "0.3.21"
regex = "1.6.0"