[package]
name = "paperclip_language_services"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []

[lib]
name = "paperclip_language_services"

[dependencies]
paperclip_parser = { path = "../parser" }
paperclip_proto = { path = "../proto" }
paperclip_common = { path = "../rs-common" }
colors-transform = "0.2.11"
css-color = "0.2.4"

