[package]
name = "paperclip_language_services"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []

[lib]
name = "paperclip_language_services"

[features]
default = ["local"]
local = ["paperclip_parser/local", "paperclip_proto/local", "paperclip_proto_ext/local", "paperclip_ast_serialize/local", "paperclip_common/local"]

[dependencies]
paperclip_parser = { path = "../parser", features = [] }
paperclip_proto = { path = "../proto", features = [] }
paperclip_proto_ext = { path = "../proto_ext", features = [] }
paperclip_ast_serialize = { path = "../ast_serialize", features = [] }
paperclip_common = { path = "../rs_common", features = [] }
colors-transform = "0.2.11"
css-color = "0.2.4"
anyhow = "1.0.65"
futures = "0.3.24"
