[package]
name = "paperclip-loader"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["lib/main.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paperclip_common = { path = "../rs-common" }
paperclip_project = { path = "../project" }
paperclip_config = { path = "../config" }
futures = "0.3.21"
anyhow = "1.0.61"
neon-serde3 = "0.10.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
