[package]
name = "paperclip_parser"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []

[lib]
name = "paperclip_parser"

[dependencies]
serde = { version = "1.0.143", features = ["derive", "rc"] }
anyhow = "1.0.61"
serde_json = { version = "1.0.83" }
paperclip_proto = { path = "../proto" }
crc = "1.8.1"
paperclip_common = { path = "../rs-common" }
pretty_assertions = "1.2.1"
textwrap = "0.15.0"
glob = "0.3.0"
futures = "0.3.21"
