[package]
name = "paperclip_project"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []

[lib]
name = "paperclip_project"

[features]
default = ["local"]
local = ["paperclip_proto_ext/local", "paperclip_common/local", "paperclip_config/local", "paperclip_compiler_react/local", "paperclip_compiler_yew/local", "paperclip_parser/local"]


[dependencies]
paperclip_parser = { path = "../parser", features = [] }
paperclip_proto = { path = "../proto", features = [] }
paperclip_proto_ext = { path = "../proto_ext", features = [] }
paperclip_evaluator = { path = "../evaluator", features = [] }
paperclip_validate = { path = "../validate", features = [] }
paperclip_compiler_react = { path = "../compiler-react", features = [] }
paperclip_compiler_yew = { path = "../compiler-yew", features = [] }
paperclip_config = { path = "../config", features = [] }
paperclip_common = { path = "../rs_common", features = [] }
textwrap = "0.15.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = { version = "1.0.83" }
anyhow = "1.0.61"
futures = "0.3.21"
futures-core = "0.3.24"
futures-util = "0.3.24"
path-absolutize = "3.0.13"
notify = "5.0.0"
wax = "0.5.0"
async-stream = "0.3.3"
mime_guess = "2.0.4"
base64 = "0.13.1"

[dev-dependencies]
assert_cmd = "2.0.4"
