[package]
name = "paperclip_project"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []

[lib]
name = "paperclip_project"


[dependencies]
paperclip_parser = { path = "../parser"}
paperclip_proto = { path = "../proto"}
paperclip_core = { path = "../core"}
paperclip_evaluator = { path = "../evaluator"}
paperclip_validate = { path = "../validate"}
paperclip_compiler_react = { path = "../compiler-react"}
paperclip_compiler_yew = { path = "../compiler-yew"}
paperclip_common = { path = "../rs_common"}
textwrap = "0.15.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = { version = "1.0.83" }
anyhow = "1.0.61"
futures = "0.3.21"
futures-core = "0.3.24"
futures-util = "0.3.24"
path-absolutize = "3.0.13"
notify = "5.0.0"
wax = "0.5.0"
async-stream = "0.3.3"
mime_guess = "2.0.4"
base64 = "0.13.1"

[dev-dependencies]
assert_cmd = "2.0.4"
