[package]
name = "paperclip_proto"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []

[lib]
name = "paperclip_proto"

[dependencies]
serde = { version = "1.0.143", features = ["derive", "rc"] }
anyhow = "1.0.61"
serde_json = { version = "1.0.83" }
crc = "1.8.1"
tonic = "0.8.1"
tonic-web = "0.4.0"
paperclip_common = { path = "../rs-common" }
textwrap = "0.15.0"
glob = "0.3.0"
futures = "0.3.21"
prost = "0.11.0"

[build-dependencies]
prost-build = "0.11.1"
tonic-build = "0.8.0"

