[package]
name = "paperclip_proto"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []

[lib]
name = "paperclip_proto"

[dependencies]
serde = { version = "1.0.143", features = ["derive", "rc"] }
tonic = "0.8.1"
prost = "0.11.0"

[build-dependencies]
prost-build = "0.11.1"
tonic-build = "0.8.0"

