[package]
name = "paperclip_proto"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []

[lib]
name = "paperclip_proto"

[features]
transport = ["tonic/transport", "tonic-build/transport"]
local = []

[dependencies]
serde = { version = "1.0.143", features = ["derive", "rc"] }
tonic = { version = "0.10.2", default-features = false, features = ["codegen", "prost"] }
prost = "0.12.3"
anyhow = "1.0.65"
crc = "3.0.0"
futures = "0.3.24"

[build-dependencies]
prost-build = "0.12.3"
tonic-build = { version = "0.10.2", default-features = false, features = [
    "prost",
] }
