[package]
name = "paperclip_proto_ext"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []

[lib]
name = "paperclip_proto_ext"

[dependencies]
paperclip_proto = { path = "../proto" }
paperclip_parser = { path = "../parser" }
paperclip_common = { path = "../rs_common", features = ["local"] }
anyhow = "1.0.66"
futures = "0.3.25"
crc = "1.8.1"
async-trait = "0.1.58"
