[package]
name = "paperclip_common"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []

[lib]
name = "paperclip_common"

[dependencies]
crc = "1.8.1"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
regex = "1.6.0"
lazy_static = "1.4.0"
