[package]
name = "paperclip_common"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []

[lib]
name = "paperclip_common"

[features]
default = []
local = []

[dependencies]
crc = "1.8.1"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
regex = "1.6.0"
lazy_static = "1.4.0"
async-channel = "1.7.1"
event-listener = "2.5.3"
crossbeam-channel = "0.5"
anyhow = "1.0.61"
futures-core = "0.3.24"
futures = "0.3.24"
async-stream = "0.3.3"
futures-util = "0.3.24"
flume = "0.10.14"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
path-absolutize = { version = "3.0.14" }
