[package]
name = "paperclip_validate"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []


[lib]
name = "paperclip_validate"

[dependencies]
paperclip_common = { path = "../rs_common" }
paperclip_proto = { path = "../proto" }
paperclip_proto_ext = { path = "../proto_ext", features = [] }
paperclip_parser = { path = "../parser" }
paperclip_evaluator = { path = "../evaluator" }
anyhow = "1.0.61"
colored = "2.1.0"


[dev-dependencies]
futures = "0.3.21"
anyhow = "1.0.61"
