[package]
name = "paperclip_workspace"
version = "0.1.1"
authors = ["Craig Condon <craig.j.condon@gmail.com>"]
edition = "2021"
exclude = []

[lib]
name = "paperclip_workspace"

[dependencies]
paperclip_project = { path = "../project" }
paperclip_proto = { path = "../proto", features = ["transport"] }
paperclip_proto_ext = { path = "../proto_ext" }
tonic = { version = "0.8.2", features = ["tls"] }
tonic-web = "0.4.0"
prost = "0.11.0"
crc = "1.8.1"
paperclip_ast_serialize = { path = "../ast_serialize" }
tokio-native-tls = { version = "0.3.0" }
tokio-rustls = { version = "0.23.0" }
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net", "signal"] }
paperclip_common = { path = "../rs_common" }
paperclip_evaluator = { path = "../evaluator" }
paperclip_config = { path = "../config" }
paperclip_parser = { path = "../parser" }
paperclip_language_services = { path = "../language_services" }
async-trait = "0.1.57"
async-channel = "1.7.1"
parking_lot = "0.12.1"
hyper = { version = "0.14.20", features = ["server", "tcp", "http1", "http2", "stream", "runtime"] }
headers = "0.3.8"
portpicker = "0.1.1"
mime_guess = "2.0.4"
warp = "0.3.2"
futures = "0.3.25"
futures-core = "0.3.25"
futures-util = "0.3.25"
notify = "5.0.0"
tower = { version = "0.4.13" }
tower-http = { version = "0.3.4", features = ["add-extension"] }
http = "0.2.8"
http-body = "0.4.5"
include_dir = "0.7.3"
path-absolutize = "3.0.13"
open = "3.0.3"
tokio-stream = "0.1.10"
async-stream = "0.3.3"
anyhow = "1.0.65"
crossbeam-channel = "0.5.6"
flume = "0.10.14"
tls-listener = { version = "0.5.1", features = ["rt", "rustls", "hyper-h1", "hyper-h2"] }
rustls = "0.20.7"
rustls-pemfile = "1.0.1"
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
ansi_term = "0.12.1"
Inflector = "0.11.4"

[dev-dependencies]
assert_cmd = "2.0.4"
